assets/css/style.css
/*Google fonts import*/
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

/*Asterisk overrides all styles. Low specificity so this can be easilly overridden*/
* {
    /*Color variables. Used to easily switch colors if needed. See comment related to darkmode on the bottom*/
    --background-color: #eff0f3;
    --heading-color: #0d0d0d;
    --paragraph-color: #2a2a2a;
    --accent-color: #ff8e3c;
    --border-color: #2a2a2ae8;
    --shadow-color: #2a2a2a15;

    /*Overrides default settings*/
    margin: 0;
    padding: 0;
    border: 0;
    box-sizing: border-box;

    /*Sets font for entire page. Easily overriden*/
    font-family: 'Roboto', sans-serif;
}

/*General Styles*/
body {
    /*Makes sure the page takes up at least the whole viewport*/
    min-height: 100vh;
    /*Required to make the main content take up any unused space*/
    display: flex;
    flex-direction: column;
}

h1 {
    color: var(--heading-color);
    font-size: 30px;
}

h2 {
    color: var(--heading-color);
    font-size: 16px;
    margin-top: 1rem;
}

p {
    color: var(--paragraph-color);
    font-size: 16px;
    margin-top: 0.5rem;
    font-weight: 400;
}

li {
    list-style-type: none;
}

a {
    text-decoration: none;
    color: var(--heading-color);
}

.icon-align-bottom {
    vertical-align: bottom;
}

.hidden {
    display: none;
}

/*Header*/
header {
    background-color: var(--background-color);
    padding: 5px 0;
    position: fixed;
    z-index: 99;
    width: 100%;
    display: flex;
    justify-content: space-between;
    border-bottom: var(--border-color) solid 2px;
    box-shadow: 0px 1px 5px 5px var(--shadow-color);
}

/*Navbar styles*/
nav {
    /*Doesn't display by default*/
    display: none;

    position: absolute;
    left: 0;
    width: 100%;
    top: 0;
    transition: all 0.3s;

}

#logo-text{
    font-size: 1.2em;
    margin-left: 5px;
}

#logo {
    margin-left: 10px;
    height: 3em;
}

#logo a {
    display: inline-block;
    height: 0;
}

#logo a img {
    width: 3em;

}

#menu {
    width: 100%;
    text-align: right;
    background-color: var(--background-color);
    border-radius: 0 0 10px 10px;
    border-bottom: var(--border-color) solid 2px;
    box-shadow: 0px 1px 5px 5px var(--shadow-color);
}

#menu li {
    border-top: var(--border-color) solid 2px;
    padding: 10px;
}

#menu li h2 {
    margin: 0;
    width: 100%;
}

#menu li a {
    display: flex;
    align-items: flex-end;
    margin-right: 10px;
}

#hamburger-menu-container {
    display: flex;
    justify-content: flex-end;
    width: 100%;
    margin-right: 10px;
}


#hamburger-menu-icon span {
    font-size: 3em;
}

#hamburger-menu-toggle:checked~nav {
    /*Menu displays when the checkbox is pressed*/
    display: block;
    top: 100%;
    transition: all 0.3s;
}

/*Main content*/
main {
    background-color: var(--background-color);
    /*Makes the main element take up any unused space*/
    flex: 1 0 auto;
    /*Pushes the content under the header*/
    padding-top: 60px;
}

/*Main heading = the title of the page*/
/*Container used to hold the contents and center them as flex does not have a justify self did not work*/
#main-heading-container {
    margin-top: 10px;
    display: flex;
    justify-content: center;
}

/*Made to fit the content so the line underneath can adjust to be half the width of the text*/
#main-heading {
    width: fit-content;
    text-align: center;
    text-decoration: underline;
    text-decoration-thickness: 3px;
    text-decoration-color: var(--heading-color);
    text-underline-offset: 3px;
}

/*Line underneath*/
#main-heading hr {
    margin: 5px auto;
    width: 50%;
    border: var(--heading-color) solid;
    border-bottom: 3px;
}

#main-content {
    display: grid;
    justify-self: center;
    margin: auto;

    width: 85%;
    max-width: 1000px;
}

/*Footer*/
footer {
    background-color: var(--background-color);
    border-top: 2px solid var(--border-color);
}

footer hr {
    width: 90%;
    align-self: center;
    margin: auto;
    border-bottom: 2px solid var(--paragraph-color);
}

/*Social media links*/
#social-media {
    max-width: 400px;
    margin: auto;

    display: flex;
    justify-content: space-between;
    align-items: baseline;
    padding: 15px 40px;
}

#social-media i {
    font-size: 2em;
}

.social-media-item {
    text-align: center;
    margin: auto 5px;
    transition: transform 0.2s;
}

/*Contact and location*/

#info-footer,
#location-footer {
    margin: 15px;
    margin-left: 5%;
    margin-top: 10px;
}

#info-footer h2,
#location-footer h2 {
    margin-bottom: 5px;
}

#info-footer a,
#location-footer a {
    display: flex;
    align-items: flex-end;
}

/*For screens larger than 768px*/
@media screen and (min-width: 768px) {
    nav{
        display: block;
        position: relative;
        width: fit-content;
    }

    #menu{
        display: flex;
        border: none;
        box-shadow: none;
    }

    #menu li{
        border: none;
    }

    #menu li h2{
        margin-right: 3px;
    }

    #hamburger-menu-container{
        display: none;
    }
}

